<resources>
    <string name="app_name">PusheenRun</string>
    <!-- Strings related to login -->
    <string name="login_title">PusheenRun</string>
    <string name="register_title">NEW ACCOUNT</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="action_login">LOGIN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="action_register">CREATE</string>

    <string name="action_login_short">LOGIN</string>
    <string name="action_sign_up_short">SIGN UP</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
